about page, modals and styling

--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,6 @@
-Steps for News App to work:
+Steps for Global News to work:
 
 step 1: rename keyCopy.js to key.js
 step 2: replace YOUR API KEY HERE with your NEWS API key
+
+Please view on mobile screen size. Other view sizes coming soon.
